--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body {
-  color: #333;
+  background-color: #1e1f24;
+  color: #1e1f24;
   text-align: center;
   font-family: "Arial";
   font-size: 16px;
@@ -7,13 +8,18 @@ body {
   padding: 0;
 }
 
+#cabecera #logo {
+  width: 20px;
+  vertical-align: middle;
+}
+
 #cabecera {
-  background: #33a;
-  box-shadow: 0pc 2px 20px rgba(0, 0, 0, 0.75);
+  background: #37488b;
+  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
   color: white;
   font-weight: bold;
   margin: 0;
-  padding: 0.5em;
+  padding: 0.5em 0 0.5em 2em;
 }
 
 #cabecera #tagline {
@@ -34,5 +40,6 @@ body {
 }
 
 #post {
+  background-color: white;
   padding: 1em;
 }
